# PhysicsSimulator

./: .gitignore  CMakeLists.txt  README.md  main  main.c  main.cpp
core/: WindowRenderer.cpp  WindowRenderer.hpp
graphics/: Circle.cpp  Circle.hpp
physics/: Particle.cpp  Particle.hpp  Vector2.hpp
